# HoCo

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  example.txt  main.cpp  pre-commit-config.yaml  requirements.txt
Coco/: Coco.py  Driver.frame  HoCo.atg  Parser.frame  Parser.py  Scanner.frame  Scanner.py
examples/: absolute.vcc  bubble.vcc  example.txt  example.vcc  example2.vcc
parser_src/: AstTree.py  grammar.atg
src/: setup.sh
src/GUI/: AstTree.py  Parser.py  Scanner.py  VeKrestKrest.py  ast_tree.py  editor.py  example.txt  lexer.py  main.py
src/parser/: AstTree.py  Parser.py  Scanner.py  grammar.atg
static/: theme.json  theme1.json  theme2.json  theme3.json
static/css/: style.qss
tests/: mid_func.txt  small.txt  test_tree.py
wiki/repository_work/repository/: guide_Соглашения о Code Review.md  guide_Соглашения о Issues.md  guide_Соглашения о Merge Request.md  guide_Соглашения о ветках.md  guide_Соглашения о коммитах.md  guide_Соглашения о работе в СХД.md
